Probably, hopefully fixed the overflow issue on mobile

--- a/apps/chat/app/styles/main.scss
+++ b/apps/chat/app/styles/main.scss
@@ -52,6 +52,9 @@ html, body, #content {
 	height:100%;
 	font-family: 'Roboto';
 	line-height: 1.4;
+	@media screen and (max-width: $break-mid) {
+		overflow-x: hidden;
+	}
 }
 #content{
 	background-color: #FAFAFA;
